# anycrc

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  anycrc.pyx  bench.py  dl_models.py  postbuild.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: github-deploy.yml  python-app.yml  python-test.yml  test.yml
anycrc/: models.py
bench/: bench.py  start.py
benchmark/: bench.bat  bench.py  bench.sh  start.py
lib/crcany/: crc.c  crc.h  crcdbl.c  crcdbl.h  model.c  model.h
src/anycrc/: __init__.py  __main__.py  anycrc.c  anycrc.pyx  crc.c  crc.py  crc.pyx  models.py  utils.py
src/anycrc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/crcany/: __init__.py  crcany.pyx  models.py
src/cyrc/: __init__.py  cyrc.pyx  models.py
