[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "anycrc"
version = "1.3.5"
description = "The fastest general Python CRC Library"
readme = "README.md"
license = "Zlib"
requires-python = ">=3.8"
dependencies = ["bitarray==3.5.2"]

[project.urls]
"Homepage" = "https://github.com/marzooqy/anycrc"