[project]
name = "anycrc"
version = "2.0.0"
description = "The fastest general Python CRC Library"
readme = "README.md"
license = {text = "Zlib"}
requires-python = ">=3.8"
dependencies = ["bitarray==3.8.1"]

[project.urls]
"Homepage" = "https://github.com/marzooqy/anycrc"

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp314t-*"]